--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "tauri": "tauri",
-    "build": "esbuild src/main.js --bundle --outfile=src/app.js"
+    "build": "vite build"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.7.1",
@@ -16,6 +16,8 @@
   "dependencies": {
     "@tauri-apps/api": "^2.7.0",
     "@tauri-apps/plugin-positioner": "^2.3.0",
-    "@tauri-apps/plugin-shell": "^2.3.0"
+    "@tauri-apps/plugin-shell": "^2.3.0",
+    "sass": "^1.90.0",
+    "vite": "^6.3.5"
   }
 }
