--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "tauri": "tauri",
-    "build": "vite build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "tauri": "tauri"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.7.1",
@@ -18,6 +20,8 @@
     "@tauri-apps/plugin-positioner": "^2.3.0",
     "@tauri-apps/plugin-shell": "^2.3.0",
     "sass": "^1.90.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "vue": "^3.5.19"
   }
 }
